added variable selection template to Ch7; mentioned in Ch8; added predictor design to Ch9

--- a/05-classification.Rmd
+++ b/05-classification.Rmd
@@ -5,8 +5,9 @@ knitr::opts_chunk$set(message = FALSE, warning = FALSE, echo = TRUE)
 ```
 
 ## Overview 
-Up until this point, we have focused solely on descriptive and exploratory
-questions about data. This chapter and the next together serve as our first
+In previous chapters, we focused solely on descriptive and exploratory
+questions about data. 
+This chapter and the next together serve as our first
 foray into answering *predictive* questions about data. In particular, we will
 focus on the problem of *classification*, i.e., using one or more quantitative
 variables to predict the value of a third, categorical variable. This chapter
