--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -491,14 +491,20 @@ As with K-NN classification (or any prediction algorithm for that manner), K-NN 
 
 ## Multivariate K-NN regression
 
-As in K-NN classification, in K-NN regression we can have multiple predictors.
-When we have multiple predictors in K-NN regression, we have the same concern
-regarding the scale of the predictors. This is because once again, 
+As in K-NN classification, we can use multiple predictors in K-NN regression.
+In this setting, we have the same concerns regarding the scale of the predictors. Once again, 
  predictions are made by identifying the $K$
-observations that are nearest to the new point we want to predict, and any
+observations that are nearest to the new point we want to predict; any
 variables that are on a large scale will have a much larger effect than
-variables on a small scale. Since the `recipe` we built above scales and centers
+variables on a small scale. But since the `recipe` we built above scales and centers
 all predictor variables, this is handled for us.
+
+Note that we also have the same concern regarding the selection of predictors
+in K-NN regression as in K-NN classification: more predictors is **not** always
+better, and the choice of which predictors to use has a potentially large influence
+on the quality of predictions. Fortunately, we can use the best subset selection 
+algorithm from the classification chapter in K-NN regression as well, assuming
+a small number (at most 10 or so) of total predictors.
 
 We will now demonstrate a multivariate K-NN regression analysis of the 
 Sacramento real estate data using `tidymodels`. This time we will use
