--- a/08-regression2.Rmd
+++ b/08-regression2.Rmd
@@ -339,6 +339,27 @@ which obviously does not match reality. On the other hand, the trend of increasi
 house size corresponding to increasing house price probably continues for large houses, 
 so the "flat" extrapolation of K-NN likely does not match reality. 
 
+## Predictor design
+
+We were quite fortunate in our initial exploration to find a predictor variable (house size)
+that seems to have a meaningful and nearly linear relationship with our response variable (sale price).
+But what should we do if we cannot immediately find such a nice variable?
+Well, sometimes it is just a fact that the variables in the data do not have enough of 
+a relationship with the response variable to provide accurate predictions. For example,
+if the only available predictor was "the current house owner's favourite icecream flavour",
+we likely would have little hope of using that variable to predict the house's sale price
+(barring any future remarkable scientific discoveries about the relationship between 
+the housing market and homeowner icecream preferences). In cases like these, 
+the only option is to go and measure more useful variables.
+
+There are, however, a wide variety of cases where the predictor variables *do* have a 
+meaningful relationship with the response variable, but that relationship is not obvious
+if you just plot the variables directly. In these cases, you will need to use some of the wrangling
+tools from previous chapters to manipulate the variables into a useful form, which is sometimes
+known as *feature engineering*.
+
+
+
 ## Multivariate linear regression
 
 As in K-NN classification and K-NN regression, we can move beyond the simple
@@ -465,20 +486,10 @@ only a single predictor was
 `r format(lm_test_results %>% filter(.metric == 'rmse') %>% pull(.estimate), scientific = FALSE)`, 
 which is slightly more than that of our more complex model. Our model with two predictors
 provided a slightly better fit on test data than our model with just one. 
+As mentioned earlier, this is not always the case: sometimes including more
+predictors can negatively impact the prediction performance on unseen 
+test data (here we compare test errors purely for the purposes of teaching).
 
-But should we always end up choosing a model with more predictors than fewer? 
- The answer is no; you never know what model will be the best until you go through the
-process of comparing their performance on held-out test data. Exploratory 
-data analysis can give you some hints, but until you look
-at the prediction errors to compare the models you don't really know.
-Additionally, here we compare test errors purely for the purposes of teaching.
-In practice, when  you want to compare several regression models with
-differing numbers of predictor variables, you should use
-cross-validation on the training set only; in this case choosing the model is part
-of tuning, so you cannot use the test data. There are several well known and more advanced
-methods to do this that are beyond the scope of this course, and they include
-backward or forward selection, and L1 or L2 regularization (also known as Lasso
-and ridge regression, respectively).
 
 ## The other side of regression
 
