renamed regresion to the reg prblm for consistency with clsfction

--- a/07-regression1.Rmd
+++ b/07-regression1.Rmd
@@ -30,7 +30,7 @@ By the end of the chapter, students will be able to:
 * In the context of K-NN regression, compare and contrast goodness of fit and prediction properties (namely RMSE vs RMSPE).
 * Describe the advantages and disadvantages of the K-nearest neighbour regression approach.
 
-## Regression 
+## The regression problem
 
 Regression, like classification, is a predictive problem setting where we want
 to use past information to predict future observations. But in the case of
