removed the second one sample created in bootstrap section so only one sample is created in this chapter

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -239,20 +239,20 @@ distribution of observations in the sample,
 and calculate the mean of our sample. This number is a **point estimate** for the mean of the full population.
 
 ```{r 11-example-means3, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Distribution of price per night ($) for sample of 40 Airbnb listings", out.width = "60%"}
-sample_1 <- airbnb %>%
+one_sample <- airbnb %>%
   rep_sample_n(40)
-sample_1
-sample_distribution <- ggplot(sample_1, aes(price)) +
+one_sample
+sample_distribution <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Price per night ($)")
 sample_distribution
-estimates <- sample_1 %>%
+estimates <- one_sample %>%
   summarize(sample_mean = mean(price))
 estimates
 ```
 Recall that the population mean 
 was \$`r round(population_parameters$pop_mean,2)`. We see that our point
-estimate for the mean is \$`r round(estimates$sample_mean, 2)`. So our estimate was actually quite close to the population parameter: the mean was 
+estimate for the mean is \$`r round(estimates$sample_mean, 2)`. So we can see how far our estimate was from the population parameter: the mean was 
 about `r round(100*abs(estimates$sample_mean - population_parameters$pop_mean)/population_parameters$pop_mean, 1)`% off.
 Note that in practice, we usually cannot compute the accuracy of the estimate, since we do not have access to the population
 parameter; if we did, we wouldn't need to estimate it!
@@ -262,10 +262,10 @@ we took another random sample from the population, then the value of our estimat
 So then did we just get lucky with our point estimate above?
 How much does our estimate vary across different samples of size 40 in this example? Again, since we have access to the population,
 we can take many samples and plot the **sampling distribution** of sample means for samples of size 40 to get a sense
-for this variation. In this case, we'll use 20,000 samples of size 40.
+for this variation. In this case, we'll use 15,000 samples of size 40.
 
 ```{r 11-example-means4, echo = TRUE, message = FALSE, warning = FALSE, fig.cap= "Sampling distribution of the sample means for sample size of 40",out.width = "60%"}
-samples <- rep_sample_n(airbnb, size = 40, reps = 20000)
+samples <- rep_sample_n(airbnb, size = 40, reps = 15000)
 samples
 
 sample_estimates <- samples %>%
@@ -528,18 +528,14 @@ For a sample of size $n$, the process we will go through is as follows:
 knitr::include_graphics("img/intro-bootstrap.jpeg")
 ```
 ### Bootstrapping in R 
-Let's continue working with our Airbnb data. Once again,  let's say we are interested in estimating the population mean price per night of all Airbnb listings in
-Vancouver, Canada using a single sample we collected of size 40. 
+Let's continue working with our Airbnb data. Once again,  let's say we are interested in estimating the population mean price per night of all Airbnb listings in Vancouver, Canada using the single sample we collected of size 40. Recall our point estimate, the sample mean, was \$`r round(estimates$sample_mean, 2)` and the distribution is shown in figure \@ref(fig:11-bootstrapping1).
 
-To simulate doing this in R, we will use `rep_sample_n` to take a random sample from from our population. In real life we wouldn't do this step in R, we would instead simply load the data into R, that we, or our collaborators collected.
-
-After we have our sample, we will visualize it's distribution and calculate our point estimate, the sample mean.
+```{r, echo = F, message = F, warning = F}
+one_sample <- one_sample %>% 
+  ungroup() %>% select(-replicate)
+```
 
 ```{r 11-bootstrapping1, echo = TRUE, message = FALSE, warning = FALSE, fig.cap = "Histogram of price per night ($) for one sample of size 40", out.width = "60%"}
-one_sample <- airbnb %>%
-  rep_sample_n(40) %>%
-  ungroup() %>% # ungroup the data frame
-  select(price) # drop the replicate column
 one_sample
 one_sample_dist <- ggplot(one_sample, aes(price)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
@@ -547,14 +543,8 @@ one_sample_dist <- ggplot(one_sample, aes(price)) +
 one_sample_dist
 ```
 
-```{r 11-bootstrapping2, echo = TRUE, message = FALSE, warning = FALSE}
-one_sample_estimates <- one_sample %>%
-  summarise(sample_mean = mean(price))
-one_sample_estimates
-```
-
 The sample distribution is skewed with a few observations out to the right. The
-mean of the sample is \$`r round(one_sample_estimates$sample_mean,2)`.
+mean of the sample is \$`r round(estimates$sample_mean, 2)`.
 Remember, in practice, we usually only have one sample from the population. So
 this sample and estimate are the only data we can work with.
 
@@ -798,17 +788,6 @@ grid.text("many means...",
   x = unit(0.7, "npc"),
   y = unit(0.02, "npc"), gp = gpar(fontsize = 10)
 )
-# grid.text(".", x = unit(0.45, "npc"),
-#           y = unit(0.06, "npc"),gp = gpar(fontsize=15))
-# grid.text(".", x = unit(0.45, "npc"),
-#           y = unit(0.025, "npc"),gp = gpar(fontsize=15))
-#
-# grid.text(".", x = unit(0.7, "npc"),
-#           y = unit(0.14, "npc"),gp = gpar(fontsize=15))
-# grid.text(".", x = unit(0.7, "npc"),
-#           y = unit(0.16, "npc"),gp = gpar(fontsize=15))
-# grid.text(".", x = unit(0.7, "npc"),
-#           y = unit(0.18, "npc"),gp = gpar(fontsize=15))
 ```
 
 ### Using the bootstrap to calculate a plausible range  
@@ -846,7 +825,7 @@ boot_est_dist +
   )
 ```
 
-To finish our estimation of the population parameter, we would report the point estimate and our confidence interval's lower and upper bounds. Here the sample mean price-per-night of 40 Airbnb listings was \$`r round(mean(sample_1$price),2)`, and we are 95\% "confident" that the true population mean price-per-night for all Airbnb listings in Vancouver is between \$(`r round(bounds[1],2)`, `r round(bounds[2],2)`).
+To finish our estimation of the population parameter, we would report the point estimate and our confidence interval's lower and upper bounds. Here the sample mean price-per-night of 40 Airbnb listings was \$`r round(mean(one_sample$price),2)`, and we are 95\% "confident" that the true population mean price-per-night for all Airbnb listings in Vancouver is between \$(`r round(bounds[1],2)`, `r round(bounds[2],2)`).
 
 Notice that our interval does indeed contain the true
 population mean value, \$`r round(mean(airbnb$price),2)`\! However, in
