fixed bootstrapping graphs

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -616,6 +616,7 @@ tail(boot15000_means)
 boot_est_dist <- ggplot(boot15000_means, aes(x = mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Sample mean price per night ($)")
+boot_est_dist
 ```
 
 Let's compare our bootstrap distribution with the true sampling distribution (taking many samples from the population). 
@@ -632,16 +633,19 @@ sampling_dist <- ggplot(sample_estimates, aes(x = sample_mean)) +
   geom_histogram(fill = "dodgerblue3", color = "lightgrey") +
   xlab("Sample mean price per night ($)")
 
-sampling_dist <- sampling_dist +
+max_height<- max(max_count(sampling_dist), max_count(boot_est_dist))
+
+
+sampling_dist <- sampling_dist + 
   annotate("text",
-    x = max_x(sampling_dist), max_count(sampling_dist), hjust = 1, vjust = 1,
+    x = max_x(sampling_dist), max_height, hjust = 1, vjust = 1,
     label = paste("mean = ", round(mean(sample_estimates$sample_mean), 1))
   ) +
-  geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red")
+  geom_vline(xintercept = mean(sample_estimates$sample_mean), col = "red") 
 
 annotated_boot_est_dist <- boot_est_dist +
   annotate("text",
-    x = max_x(boot_est_dist), max_count(boot_est_dist), hjust = 1, vjust = 1,
+    x = max_x(boot_est_dist), max_height, hjust = 1, vjust = 1,
     label = paste("mean = ", round(mean(boot15000_means$mean), 1))
   ) +
   geom_vline(xintercept = mean(boot15000_means$mean), col = "red")
