added image, fixed writing

--- a/10-inference.Rmd
+++ b/10-inference.Rmd
@@ -96,8 +96,11 @@ airbnb <- airbnb %>%
   mutate(id = 1:nrow(airbnb))
 head(airbnb)
 ```
+```{r 11-vancouver-city, echo = FALSE, message = FALSE, warning = FALSE, fig.cap = "Vancouver, BC Canada", fig.retina = 2, out.width="880"}
+knitr::include_graphics("https://upload.wikimedia.org/wikipedia/commons/7/76/Vancouver_City_2_by_ajithrajeswari.jpg")
+```
 
-Suppose the city of Vancouver wants to know how many homes and apartments are being entirely rented out as short-term rentals on Airbnb (rather than just as private or shared rooms). Therefore they may want to estimate the true proportion of all Airbnb listings where the type of place is listed as entire home or apartment. Now, of course, usually we do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
+Suppose the city of Vancouver wants to know how many entire homes and apartments are being rented out as short-term rentals on Airbnb (rather than just as private or shared rooms). Therefore they may want to estimate the true proportion of all Airbnb listings where the type of place is listed as entire home or apartment. Now, of course, usually we do not have access to the true population, but here let's imagine (for learning purposes) that our data set represents the population of all Airbnb rental listings in Vancouver, Canada. We can find the proportion of listings where `room_type == "Entire home/apt"`.
 
 ```{r 11-example-proportions2, echo = TRUE, message = FALSE, warning = FALSE}
 library(tidyverse)
